--- a/Nascimento.Software.University.Tests/University.Tests.csproj
+++ b/Nascimento.Software.University.Tests/University.Tests.csproj
@@ -8,7 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-      <ProjectReference Include = "C:\Users\Terminal\source\university\Nascimento.Software.University\Nascimento.Software.University.Domain\Nascimento.Software.University.Domain.csproj"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -19,6 +18,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Nascimento.Software.University.Domain\Nascimento.Software.University.Domain.csproj" />
   </ItemGroup>
 
 </Project>
